<resources>
    <string name="app_name">Assignment 1</string>
    <string name="enter_age">Enter Age</string>
    <string name="age">Age</string>
    <string name="clear">Clear</string>
    <string name="generate_history">Generate History</string>
    <string name="history">History</string>
    <string name="History">History</string>
    <string name="HIstory">History</string>
    <string name="hiStory">HISTORY</string>
</resources>